fixed width of characteristic box from being slightly too large

--- a/HaloMythic3dot5.css
+++ b/HaloMythic3dot5.css
@@ -49,7 +49,7 @@ button[type="roll"] {
   overflow: hidden;
   margin-left: 0px;
   text-align: center;
-  width: 115%;
+  width: 110%;
 }
 
 h2 {
@@ -285,4 +285,3 @@ start of advancement/experience tab ______________________________ */
 
 /* end of advancement/experience tab ______________________________
 ______________________________ start of journal */
-
